--- a/Dockerfile.xeus3
+++ b/Dockerfile.xeus3
@@ -54,36 +54,11 @@ SHELL ["/bin/bash", "-c"]
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt update -q -qq && \
-    apt install -q -qq -y wget libssl-dev openssl cmake g++ pkg-config git uuid-dev libsodium-dev && \
+    apt install -q -qq -y libssl-dev openssl pkg-config uuid-dev libsodium-dev && \
     apt clean && \
     rm -rf /var/lib/apt/lists/
 
 COPY --from=builder ${OUTPUT_DIR} ${OUTPUT_DIR}
-## COPY --from=builder /usr/local /usr/local
-
-###
-# Build xeus-python (testing kernel)
-###
-WORKDIR /build_xeus
-RUN apt update -q -qq && \
-    apt install -q -qq -y wget python3-pip && \
-    apt clean && \
-    rm -rf /var/lib/apt/lists/ && \
-    python3 -m pip install --upgrade pip && \
-    python3 -m pip install jupyterlab
-## pybind11 / v2.6.2(2021.1) v2.7.1(2021.8) v2.8.1(2021.10) v2.9.2(2022.3) v2.10.4(2023.3) v2.11.1(2023.7)
-RUN (mkdir -p pybind11/build && wget https://github.com/pybind/pybind11/archive/refs/tags/v2.6.2.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C pybind11 )
-RUN (cd pybind11/build; cmake .. -D CMAKE_PREFIX_PATH=${OUTPUT_DIR} -D CMAKE_INSTALL_PREFIX=${OUTPUT_DIR}  -DPYBIND11_TEST=OFF; make install)
-## pybind11_json / 0.2.8 (2021.2) 0.2.9(2021.2) 0.2.10(2021.5) 0.2.11(2021.7) 0.2.12(2022.1) 0.2.13(2022.8)
-RUN (mkdir -p pybind11_json/build && wget https://github.com/pybind/pybind11_json/archive/refs/tags/0.2.11.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C pybind11_json )
-RUN (cd pybind11_json/build; cmake .. -D CMAKE_PREFIX_PATH=${OUTPUT_DIR} -D CMAKE_INSTALL_PREFIX=${OUTPUT_DIR};  make install)
-## xeus-python
-RUN (mkdir -p xeus-python/build && wget https://github.com/jupyter-xeus/xeus-python/archive/refs/tags/0.15.9.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C xeus-python)
-RUN (cd xeus-python/build; cmake .. -D CMAKE_PREFIX_PATH=${OUTPUT_DIR} -D CMAKE_INSTALL_PREFIX=${OUTPUT_DIR} -D CMAKE_INSTALL_LIBDIR=lib -D PYTHON_EXECUTABLE=`which python3`; make install -j$(nproc) )
-RUN (git clone https://github.com/jupyter-xeus/xeus-python-shell.git ; cd xeus-python-shell; python3  setup.py install )
-## jupyter lab --allow-root --no-browser --ip=0.0.0.0 --port=8888  --ServerApp.token=''"
-## export PYTHONPATH=/usr/lib/python38.zip:/usr/lib/python3.8:/usr/lib/python3.8/lib-dynload:/usr/local/lib/python3.8/dist-packages:/usr/local/lib/python3.8/dist-packages/xeus_python_shell-0.6.0-py3.8.egg:/usr/lib/python3/dist-packages
-###
 
 RUN apt update -q -qq && \
     apt install -q -qq -y wget python3-pip && \
