--- a/Dockerfile.xeus3
+++ b/Dockerfile.xeus3
@@ -1,5 +1,6 @@
 ## BUILD_PREFIX=repo.irsl.eiiris.tut.ac.jp/
 ## docker build --progress=plain -f Dockerfile.xeus3 --build-arg BUILD_IMAGE=ubuntu:20.04 --build-arg BASE_IMAGE=ubuntu:20.04 -t xeus3:20.04 .
+## docker build --progress=plain -f Dockerfile.xeus3 --build-arg BUILD_IMAGE=ubuntu:24.04 --build-arg BASE_IMAGE=ubuntu:24.04 --build-arg OUTPUT_DIR=/opt/xeus -t repo.irsl.eiiris.tut.ac.jp/xeus:24.04 .
 ### global ARG
 ARG OUTPUT_DIR=/opt/xeus3
 ARG BUILD_IMAGE=ubuntu:20.04
@@ -19,14 +20,14 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # xtl-dev (failed at 20.04, version missmatch)
 RUN apt update -q -qq && \
-    apt install -q -qq -y wget cmake g++ git openssl pkg-config libzmq5-dev uuid-dev libssl-dev libsodium-dev && \
+    apt install -q -qq -y wget cmake g++ git openssl pkg-config libzmq5-dev uuid-dev libssl-dev libsodium-dev lsb-release && \
     apt clean && \
     rm -rf /var/lib/apt/lists/
 
 WORKDIR /build_xeus
 ### xeus
 ## json
-RUN (mkdir json && wget https://github.com/nlohmann/json/archive/refs/tags/v3.11.2.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C json)
+RUN (mkdir json && wget https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C json)
 RUN (cd json; cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=${OUTPUT_DIR} . ; make install -j$(nproc) )
 ## xtl
 RUN (mkdir xtl && wget https://github.com/xtensor-stack/xtl/archive/refs/tags/0.7.5.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C xtl)
@@ -68,7 +69,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # xtl-dev 
 RUN apt update -q -qq && \
-    apt install -q -qq -y                    openssl pkg-config libzmq5-dev uuid-dev libssl-dev libsodium-dev && \
+    apt install -q -qq -y                    openssl pkg-config libzmq5-dev uuid-dev libssl-dev libsodium-dev lsb-release && \
     apt clean && \
     rm -rf /var/lib/apt/lists/
 
@@ -78,8 +79,8 @@ RUN apt update -q -qq && \
     apt install -q -qq -y wget python3-pip && \
     apt clean && \
     rm -rf /var/lib/apt/lists/ && \
-    python3 -m pip install --upgrade pip && \
-    python3 -m pip install jupyterlab
+    if [ "$(lsb_release -s -r)" = "24.04" ]; then PIP_OPT="--break-system-packages"; else python3 -m pip install --upgrade pip; fi && \
+    python3 -m pip install $PIP_OPT jupyterlab
 
 ENV JUPYTER_PATH=${OUTPUT_DIR}/share/jupyter
 CMD ["jupyter", "lab", "--allow-root"]
