--- a/.github/workflows/build-xeus.yaml
+++ b/.github/workflows/build-xeus.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ubuntu: [ 20.04, 22.04 ]
+        ubuntu: [ 20.04, 22.04, 24.04 ]
 #        ubuntu: [ 18.04, 20.04, 22.04 ] ## 18.04 version of cmake
     runs-on: self-hosted
     env:
