update Dockerfiles to catch up current version

--- a/Dockerfile.add_xeus_python5
+++ b/Dockerfile.add_xeus_python5
@@ -32,15 +32,16 @@ RUN ( wget https://github.com/Kitware/CMake/releases/download/v3.30.3/cmake-3.30
 WORKDIR /build_xeus
 
 ## pybind11 / v2.6.2(2021.1) v2.7.1(2021.8) v2.8.1(2021.10) v2.9.2(2022.3) v2.10.4(2023.3) v2.11.1(2023.7) v2.12 v2.13...
-RUN (mkdir -p pybind11/build && wget https://github.com/pybind/pybind11/archive/refs/tags/v2.12.0.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C pybind11 )
+#RUN (mkdir -p pybind11/build && wget https://github.com/pybind/pybind11/archive/refs/tags/v2.12.0.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C pybind11 )
+RUN (mkdir -p pybind11/build && wget https://github.com/pybind/pybind11/archive/refs/tags/v2.13.6.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C pybind11 )
 RUN (cd pybind11/build; cmake .. -DCMAKE_PREFIX_PATH=${OUTPUT_DIR} -DCMAKE_INSTALL_PREFIX=${OUTPUT_DIR} -DPYBIND11_TEST=OFF; make install)
 
 ## pybind11_json / 0.2.8 (2021.2) 0.2.9(2021.2) 0.2.10(2021.5) 0.2.11(2021.7) 0.2.12(2022.1) 0.2.13(2022.8) 0.2.14(2024.5)
-RUN (mkdir -p pybind11_json/build && wget https://github.com/pybind/pybind11_json/archive/refs/tags/0.2.14.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C pybind11_json )
+RUN (mkdir -p pybind11_json/build && wget https://github.com/pybind/pybind11_json/archive/refs/tags/0.2.15.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C pybind11_json )
 RUN (cd pybind11_json/build; cmake .. -DCMAKE_PREFIX_PATH=${OUTPUT_DIR} -DCMAKE_INSTALL_PREFIX=${OUTPUT_DIR}; make install)
 
 ## xeus-python
-RUN (mkdir -p xeus-python/build && wget https://github.com/jupyter-xeus/xeus-python/archive/refs/tags/0.17.1.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C xeus-python)
+RUN (mkdir -p xeus-python/build && wget https://github.com/jupyter-xeus/xeus-python/archive/refs/tags/0.17.4.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C xeus-python)
 RUN (cd xeus-python/build; cmake .. -DCMAKE_PREFIX_PATH=${OUTPUT_DIR} -DCMAKE_INSTALL_PREFIX=${OUTPUT_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DPYTHON_EXECUTABLE=`which python3`; make install -j$(nproc) )
 
 ###
@@ -58,7 +59,7 @@ SHELL ["/bin/bash", "-c"]
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt update -q -qq && \
-    apt install -q -qq -y                    openssl pkg-config libzmq5-dev uuid-dev libssl-dev libsodium-dev && \
+    apt install -q -qq -y                    openssl pkg-config libzmq5-dev uuid-dev libssl-dev libsodium-dev lsb-release && \
     apt clean && \
     rm -rf /var/lib/apt/lists/
 
@@ -69,12 +70,16 @@ RUN apt update -q -qq && \
     apt install -q -qq -y wget git python3-pip && \
     apt clean && \
     rm -rf /var/lib/apt/lists/ && \
-    python3 -m pip install --upgrade pip && \
-    python3 -m pip install jupyterlab jupyter-console
+    if [ "$(lsb_release -s -r)" = "24.04" ]; then \
+        PIP_OPT="--break-system-packages"; \
+    else \
+        python3 -m pip install --upgrade pip; \
+    fi && \
+    python3 -m pip install $PIP_OPT jupyterlab jupyter-console
 
 ##
 #RUN (git clone https://github.com/jupyter-xeus/xeus-python-shell.git; cd xeus-python-shell; python3 setup.py install)
-RUN (mkdir -p xeus-python-shell && wget https://github.com/jupyter-xeus/xeus-python-shell/archive/refs/tags/0.6.3.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C xeus-python-shell && cd xeus-python-shell &&  python3 setup.py install)
+RUN (mkdir -p xeus-python-shell && wget https://github.com/jupyter-xeus/xeus-python-shell/archive/refs/tags/0.6.4.tar.gz --quiet -O - | tar zxf - --strip-components 1 -C xeus-python-shell && cd xeus-python-shell &&  python3 setup.py install)
 
 ENV JUPYTER_PATH=${OUTPUT_DIR}/share/jupyter
 CMD ["jupyter", "lab", "--allow-root"]
@@ -82,7 +87,8 @@ CMD ["jupyter", "lab", "--allow-root"]
 #
 # sample
 #
-## docker run -it -p 8888:8888 xeus_python:20.04 bash
-## jupyter lab --allow-root --no-browser --ip=0.0.0.0 --port=8888  --ServerApp.token=''"
+## docker run -it -p 8888:8888 -v $(pwd):/userdir -w /userdir xeus_python5:20.04 bash
+## jupyter lab --allow-root --no-browser --ip=0.0.0.0 --port=8888  --ServerApp.token=''
+
 ## export PYTHONPATH=/usr/lib/python38.zip:/usr/lib/python3.8:/usr/lib/python3.8/lib-dynload:/usr/local/lib/python3.8/dist-packages:/usr/local/lib/python3.8/dist-packages/xeus_python_shell-0.6.0-py3.8.egg:/usr/lib/python3/dist-packages
 ## export PYTHONPATH=/usr/lib/python36.zip:/usr/lib/python3.6:/usr/lib/python3.6/lib-dynload:/usr/local/lib/python3.6/dist-packages:/home/irsl/.local/lib/python3.6/site-packages:/usr/lib/python3/dist-packages
