udpate workflow to build xeus5

--- a/.github/workflows/build-xeus.yaml
+++ b/.github/workflows/build-xeus.yaml
@@ -32,10 +32,17 @@ jobs:
 #>          docker build -f Dockerfile --pull --build-arg BUILD_IMAGE=ubuntu:${{ matrix.ubuntu }} --build-arg BASE_IMAGE=ubuntu:${{ matrix.ubuntu }} -t ${{ env.LOCAL_NAME }}2:${{ env.DOCKER_TAG }} .
 #>          docker tag  ${{ env.LOCAL_NAME }}2:${{ env.DOCKER_TAG }} ${{ env.DOCKER_DEPLOY }}xeus2:${{ env.DOCKER_TAG }}
 #>          docker push ${{ env.DOCKER_DEPLOY }}xeus2:${{ env.DOCKER_TAG }}
-      - name: Build (xeus3) and Deploy
+#>      - name: Build (xeus3) and Deploy
+#>        run: |
+#>          docker build -f Dockerfile.xeus3 --pull --build-arg BUILD_IMAGE=ubuntu:${{ matrix.ubuntu }} --build-arg BASE_IMAGE=ubuntu:${{ matrix.ubuntu }} --build-arg OUTPUT_DIR=/opt/xeus -t ${{ env.LOCAL_NAME }}3:${{ env.DOCKER_TAG }} .
+#>          docker tag  ${{ env.LOCAL_NAME }}3:${{ env.DOCKER_TAG }} ${{ env.DOCKER_DEPLOY }}xeus3:${{ env.DOCKER_TAG }}
+#>          docker push ${{ env.DOCKER_DEPLOY }}xeus3:${{ env.DOCKER_TAG }}
+#>          docker tag  ${{ env.LOCAL_NAME }}3:${{ env.DOCKER_TAG }} ${{ env.DOCKER_DEPLOY }}xeus:${{ env.DOCKER_TAG }}
+#>          docker push ${{ env.DOCKER_DEPLOY }}xeus:${{ env.DOCKER_TAG }}
+      - name: Build (xeus5) and Deploy
         run: |
-          docker build -f Dockerfile.xeus3 --pull --build-arg BUILD_IMAGE=ubuntu:${{ matrix.ubuntu }} --build-arg BASE_IMAGE=ubuntu:${{ matrix.ubuntu }} --build-arg OUTPUT_DIR=/opt/xeus -t ${{ env.LOCAL_NAME }}3:${{ env.DOCKER_TAG }} .
-          docker tag  ${{ env.LOCAL_NAME }}3:${{ env.DOCKER_TAG }} ${{ env.DOCKER_DEPLOY }}xeus3:${{ env.DOCKER_TAG }}
-          docker push ${{ env.DOCKER_DEPLOY }}xeus3:${{ env.DOCKER_TAG }}
-          docker tag  ${{ env.LOCAL_NAME }}3:${{ env.DOCKER_TAG }} ${{ env.DOCKER_DEPLOY }}xeus:${{ env.DOCKER_TAG }}
+          docker build -f Dockerfile.xeus5all --pull --build-arg BUILD_IMAGE=ubuntu:${{ matrix.ubuntu }} --build-arg BASE_IMAGE=ubuntu:${{ matrix.ubuntu }} --build-arg OUTPUT_DIR=/opt/xeus -t ${{ env.LOCAL_NAME }}5:${{ env.DOCKER_TAG }} .
+          docker tag  ${{ env.LOCAL_NAME }}5:${{ env.DOCKER_TAG }} ${{ env.DOCKER_DEPLOY }}xeus5:${{ env.DOCKER_TAG }}
+          docker push ${{ env.DOCKER_DEPLOY }}xeus5:${{ env.DOCKER_TAG }}
+          docker tag  ${{ env.LOCAL_NAME }}5:${{ env.DOCKER_TAG }} ${{ env.DOCKER_DEPLOY }}xeus:${{ env.DOCKER_TAG }}
           docker push ${{ env.DOCKER_DEPLOY }}xeus:${{ env.DOCKER_TAG }}
